# metadataGrabber

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/metadata_grabber/: __init__.py  cli.py  core.py  models.py  output.py  pubmed.py  rate_limiter.py  streamlit_app.py
src/metadata_grabber/fetchers/: __init__.py  base.py  ena.py  geo.py
tests/: conftest.py  test_cli.py  test_ena.py  test_geo.py  test_models.py  test_output.py  test_pubmed.py
