[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadata-grabber"
version = "0.1.0"
description = "Fetch metadata for genomic accessions (GEO, ENA) and produce TSV/CSV reports"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "tenacity>=8.2",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.24",
]

[project.scripts]
metadata-grabber = "metadata_grabber.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit real APIs (deselect with '-m not integration')",
]
